--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 					success : function(data) {
 						if(data.code == 0) {
 							alert("登陆成功");
-							location.href="index"
+							location.href="home";
 						} else {
 							alert(data.message);
 						}
